# DiskBox

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md
docs/: build_zh_CN.md
docs/en_US/: build_en_US.md
docs/zh_CN/: GPT.md  build_zh_CN.md
resources/: resource.h  resource.rc
src/: main.cpp  main.h  struct_definition.h
src/DiskControlBridge/: CMakeLists.txt  DCB_ErrorDefinitions.h  EnumPhysicalDisks.c  EnumPhysicalDisks.h  ErrorDefinitions.h  GetTableType.cpp  GetTableType.h  ParseGPTTable.cpp  ReadDiskSector.c  ReadDiskSector.h
src/Font/: font.cpp  font.h
src/Hash/: CRC32_Cals.c  CRC32_Cals.h
src/MainWindow/: DiskBar.cpp  DiskBar.h  MainWindow.cpp  MainWindow.h
src/UAC/: UAC.cpp  UAC.h
src/hDPI/: hDPI.cpp  hDPI.h
